remove guava classes temporary methods
removed temporary methods:
- getQueryParamsAsMap()
- getQueryParamsForFollowAsMap()
- overloaded withQueryParams()
- overloaded withQueryParamsForFollow()